--- a/client/src/app/components/alerts/alert-warning/alert-warning.component.css
+++ b/client/src/app/components/alerts/alert-warning/alert-warning.component.css
@@ -9,11 +9,17 @@
     bottom: 5px;
     left: 15px;
     width: 95%;
+    height: 30px;
     padding: .75rem 1.25rem;
     margin-bottom: 1rem;
     border: 1px solid transparent;
     border-radius: .25rem;
     font-size: 18pt;
+}
+
+.alert span {
+    position: relative;
+    top: 5px;
 }
 
 .alert-dismissible {
@@ -28,8 +34,8 @@
 
 .alert-dismissible .close {
     position: absolute;
-    top: -8px;
-    right: -10px;
+    top: -9px;
+    right: 0;
     z-index: 2;
     padding: .75rem 1.25rem;
     color: inherit;
