--- a/client/src/app/components/alerts/alert-warning/alert-warning.component.html
+++ b/client/src/app/components/alerts/alert-warning/alert-warning.component.html
@@ -1,5 +1,5 @@
 <div class="alert alert-warning alert-dismissible fade show" role="alert">
-    {{ message | translate}}
+    <span>{{ message | translate}}</span>
     <button (click)="close()" type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">×</span>
     </button>
