--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
 
 <div class="card-container">
   <div [ngClass]="{'card-active':!uploadFileMode, 'card-inactive': uploadFileMode}" (click)="uploadFileMode = false" class="card card-small">
-      <img class="card-icon" src="../assets/icons/text-icon.svg">
+    <img class="card-icon" src="../assets/icons/text-icon.svg">
 
     <span>{{ 'common.enterTextOption' | translate }}</span>
   </div>
@@ -15,19 +15,15 @@
 </div>
 
 <div [hidden]="textIsProcessing">
-  <div [hidden]="!uploadFileMode">
-    <mat-form-field [hidden]="uploadFileMode">
-      <ngx-mat-file-input (change)="handleFileInput($event.target.files)" #fileUploadInput placeholder="{{ 'common.uploadFile' | translate }}" name="fileupload"></ngx-mat-file-input>
-      <img *ngIf="fileUploadInput.empty" class="file-upload-icon folder" src="../assets/icons/folder-icon.svg">
-      <img *ngIf="!fileUploadInput.empty" (click)="fileUploadInput.clear($event)" class="file-upload-icon cancel" src="../assets/icons/cancel-icon.svg">
-    </mat-form-field>
-  </div>
+  <file-upload-component [hidden]="!uploadFileMode" (onTextProcessing)="onTextProcessing($event)"></file-upload-component>
   
   <div [hidden]="uploadFileMode">
     <mat-form-field [hidden]="!uploadFileMode" appearance="outline">
       <mat-label>{{ 'common.enterYourText' | translate }}</mat-label>
       <textarea matInput></textarea>
     </mat-form-field>
+
+    <button class="upload-file-btn" mat-raised-button>{{ 'common.processText' | translate}}</button>
   </div>
 </div>
 
@@ -38,5 +34,3 @@
   
   <h1 class="text-processing-description">{{ 'common.textIsProcessing' | translate }}</h1>
 </div>
-
-<alert-warning-component *ngIf="alertWarningVisibility" [message]="errorMessage" (onHideAlert)="onHideAlert()"></alert-warning-component>
