--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: rgb(247, 247, 247);  }
+
+h1, h2, h3, h4, h5, span, a, p, div {
+    caret-color: transparent;
+}
