--- a/client/src/app/components/alert/alert.component.css
+++ b/client/src/app/components/alert/alert.component.css
@@ -4,8 +4,14 @@
     border-color: #ffeeba;
 }
 
+.alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
+
 .alert {
-    position: absolute;
+    position: fixed;
     bottom: 5px;
     left: 15px;
     width: 95%;
