--- a/client/src/app/components/home/home.component.css
+++ b/client/src/app/components/home/home.component.css
@@ -1,3 +1,7 @@
+.main-heading {
+    text-align: center;
+}
+
 .card-container {
     display: flex;
     flex-wrap: wrap;
@@ -51,15 +55,6 @@
     margin-right: 10px;
 }
 
-.mat-form-field {
-    min-width: 1000px;
-    font-size: 20px;
-}
-
-.mat-form-field textarea {
-    height: 300px;
-}
-
 .text-processing-container {
     margin-top: 40px;
 }
@@ -72,11 +67,4 @@
 .text-processing-description {
     text-align: center;
     margin-top: 25px;
-}
-
-.upload-file-btn {
-    font-size: 16pt;
-    width: 190px;
-    height: 45px;
-    left: 410px;
 }
