--- a/client/src/app/components/home/home.component.css
+++ b/client/src/app/components/home/home.component.css
@@ -70,17 +70,21 @@
 }
 
 .assessment-result {
-    border: 2px solid black;
-    border-radius: 100%;
-    border-width:thick;
-    font-size: 50px;
-    padding: 15px;
-    position: relative;
-    left: 200px;
-    top: 50px
+    margin: 0 auto;
 }
 
+.circle {
+    width: 70px;
+    line-height: 70px;
+    border-radius: 50%;
+    padding: 10px;
+    text-align: center;
+    font-size: 38px;
+    border: 3px solid #000;
+    border-width: thick;
+  }
+
 .primary-btn {
-    top: 150px;
-    left: 60px;
+    display: table;
+    margin: 15px auto;
 }
