updated UI, added routing

--- a/client/src/app/components/nav-bar/nav-bar.component.css
+++ b/client/src/app/components/nav-bar/nav-bar.component.css
@@ -41,4 +41,12 @@
     margin-right: 15px;
     font-size: 13pt;
     font-weight: 400;
+    cursor: pointer;
+    color: white;
+    text-decoration: none;
+}
+
+.nav-links a:hover {
+    text-decoration: underline;
+    color: rgb(245, 231, 205);
 }
