--- a/client/src/app/components/nav-bar/nav-bar.component.html
+++ b/client/src/app/components/nav-bar/nav-bar.component.html
@@ -6,9 +6,9 @@
     />
 
     <div class="nav-links">
-      <a>{{ 'header.navigation.home' | translate }}</a>
-      <a>{{ 'header.navigation.about' | translate }}</a>
-      <a>{{ 'header.navigation.contacts' | translate }}</a>
+      <a routerLink="/home" routerLinkActive="active">{{ 'header.navigation.home' | translate }}</a>
+      <a routerLink="/about" routerLinkActive="active">{{ 'header.navigation.about' | translate }}</a>
+      <a routerLink="/contacts" routerLinkActive="active">{{ 'header.navigation.contacts' | translate }}</a>
     </div>
     
     <mat-form-field class="lang-dropdown">
