--- a/client/src/app/components/about/about.component.html
+++ b/client/src/app/components/about/about.component.html
@@ -1,1 +1,3 @@
-<h1>About nahui</h1>
+<div class="about-description" [innerHTML]="'about.commonDescription' | translate"></div>
+
+<div class="alert alert-warning" role="alert">{{ 'about.warning' | translate}}</div>
