--- a/client/src/app/components/home/home.component.css
+++ b/client/src/app/components/home/home.component.css
@@ -70,7 +70,7 @@
 }
 
 .assessment-result {
-    margin: 0 auto;
+    margin: 15px auto;
 }
 
 .circle {
@@ -86,5 +86,11 @@
 
 .primary-btn {
     display: table;
-    margin: 15px auto;
+    margin: 25px auto;
+}
+
+.assessment-details {
+    margin: 40px 0 50px 80px;
+    line-height: 30px;
+    font-size: 18px;
 }
